--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,15 +11,20 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme"  >
+        android:theme="@style/AppTheme"  android:label="@string/app_name">
+        <activity
+            android:name=".SampleCirclesDefault"
+            android:label="@string/app_name"
+			  android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.huaqin.app.hqfilemanager.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity android:name="com.huaqin.app.hqfilemanager.FileOperatorActivity">
         </activity>
