--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,5 +29,5 @@
         <activity android:name="com.huaqin.app.hqfilemanager.FileOperatorActivity">
         </activity>
     </application>
-
+ <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
